--- a/src/main/resources/create_recipe_tab.fxml
+++ b/src/main/resources/create_recipe_tab.fxml
@@ -6,16 +6,15 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.koh0118.CreateRecipeController">
-    <children>
-        <TextField fx:id="createRecipeNameTextfield" layoutX="38.0" layoutY="61.0" prefWidth="200.0" />
-        <TextArea fx:id="createRecipeDescriptionTextfield" layoutX="270.0" layoutY="61.0" prefHeight="93.0" prefWidth="200.0" />
-        <TextField fx:id="createRecipeIngredientsTextfield" layoutX="38.0" layoutY="116.0" prefWidth="200.0" />
-        <TextArea fx:id="createRecipeStepsTextfield" layoutX="270.0" layoutY="202.0" prefHeight="93.0" prefWidth="200.0" />
-        <Button fx:id="create_recipe_submit" layoutX="39.0" layoutY="270.0" mnemonicParsing="false" onAction="#submitRecipe" text="Submit" />
-        <Text layoutX="37.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
-        <Text layoutX="270.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
-        <Text layoutX="37.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ingredients" />
-        <Text layoutX="270.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Instructions" />
-    </children>
+<Pane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.koh0118.CreateRecipeController">
+    <TextField fx:id="createRecipeNameTextfield" layoutX="38.0" layoutY="61.0" onAction="#submitRecipe"/>
+    <TextArea fx:id="createRecipeDescriptionTextfield" layoutX="270.0" layoutY="61.0" prefHeight="93.0" prefWidth="200.0"/>
+    <TextField fx:id="createRecipeIngredientsTextfield" layoutX="38.0" layoutY="116.0"/>
+    <TextArea fx:id="createRecipeStepsTextfield" layoutX="270.0" layoutY="202.0" prefHeight="93.0" prefWidth="200.0"/>
+    <Button fx:id="create_recipe_submit" layoutX="39.0" layoutY="270.0" mnemonicParsing="false" onAction="#submitRecipe" text="%button.submit"/>
+    <Text id="create_a_recipe_ingredients_text" layoutX="37.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%label.recipeCard.ingredients"/>
+    <Text id="create_a_recipe_name_text" layoutX="37.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%label.createRecipe.name"/>
+    <Text id="create_a_recipe_description_text" layoutX="270.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%label.recipeCard.description"/>
+    <Text id="create_a_recipe_instructions_text" layoutX="270.0" layoutY="199.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%label.recipeCard.instructions"/>
 </Pane>
